PaginationHelper and tests